# docker-compose-types

./: CHANGELOG.md  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: check.yml  ci.yml  code-quality.yml
src/: lib.rs  network.rs  secret.rs  service.rs  volume.rs
tests/: README.md  mod.rs
tests/fixtures/UpperCaseDir/: docker-compose.yml
tests/fixtures/abort-on-container-exit-0/: docker-compose.yml
tests/fixtures/abort-on-container-exit-1/: docker-compose.yml
tests/fixtures/all-optionnal/: docker-compose.yml
tests/fixtures/build-args/: docker-compose.yml
tests/fixtures/commands-composefile/: docker-compose.yml
tests/fixtures/devices/: docker-compose.yml
tests/fixtures/dns/: docker-compose.yml
tests/fixtures/dockerfile-inline/: docker-compose.yml
tests/fixtures/duplicate-override-yaml-files/: docker-compose.yml
tests/fixtures/echo-services/: docker-compose.yml
tests/fixtures/entrypoint-list/: docker-compose.yml
tests/fixtures/env-file/: docker-compose.yml
tests/fixtures/env-file-array/: docker-compose.yml
tests/fixtures/environment-composefile/: docker-compose.yml
tests/fixtures/environment-interpolation/: docker-compose.yml
tests/fixtures/exit-code-from/: docker-compose.yml
tests/fixtures/expose-composefile/: docker-compose.yml
tests/fixtures/extends/: common-env-labels-ulimits.yml  docker-compose.yml  string_type_extend.yml
tests/fixtures/extensions/: docker-compose.yml
tests/fixtures/extra-hosts/: docker-compose.yml
tests/fixtures/group_add/: docker-compose.yml
tests/fixtures/includes/: common2.yml  long.yml  short.yml  test.env  testcase-includes-compose.yml
tests/fixtures/init-stdin-open-shm-size/: docker-compose.yml
tests/fixtures/ipc-mode/: docker-compose.yml
tests/fixtures/links-composefile/: docker-compose.yml
tests/fixtures/logs-composefile/: docker-compose.yml
tests/fixtures/logs-restart-composefile/: docker-compose.yml
tests/fixtures/logs-tail-composefile/: docker-compose.yml
tests/fixtures/mem/: docker-compose.yml
tests/fixtures/multiple-composefiles/: docker-compose.yml
tests/fixtures/net-container/: docker-compose.yml
tests/fixtures/network-settings/: docker-compose.yml
tests/fixtures/override-yaml-files/: docker-compose.yml
tests/fixtures/ports-composefile/: docker-compose.yml
tests/fixtures/ports-composefile-scale/: docker-compose.yml
tests/fixtures/privileged/: docker-compose.yml
tests/fixtures/ps-services-filter/: docker-compose.yml
tests/fixtures/read_only/: docker-compose.yml
tests/fixtures/secrets/: advanced-secret.yml  (+1 more)
(+7 files in other folders)
