[package]
name = "docker-compose-types"
description = "Deserialization and Serialization of docker-compose.yml files in a relatively strongly typed fashion."
version = "0.4.0"
edition = "2021"
repository = "https://github.com/stephanbuys/docker-compose-types"
license = "MIT/Apache-2.0"
keywords = ["docker-compose", "compose"]
categories = ["data-structures"]
authors = [
    "Stephan Buys <hello@stephanbuys.com>"
]
readme = "README.md"

[features]
default = ["indexmap"]
indexmap = ["dep:indexmap"]


[dependencies]
derive_builder = "0.11"
indexmap = { version = "1.8", features = ["serde-1"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

[dev-dependencies]
glob = "0.3"
