[package]
name = "docker-compose-types"
description = "Deserialization and Serialization of docker-compose.yml files in a relatively strongly typed fashion."
version = "0.7.1"
edition = "2021"
repository = "https://github.com/stephanbuys/docker-compose-types"
license = "MIT/Apache-2.0"
keywords = ["docker-compose", "compose"]
categories = ["data-structures"]
authors = [
    "Stephan Buys <hello@stephanbuys.com>",
    "Community Contributors"
]
readme = "README.md"

[features]
default = ["indexmap"]
indexmap = ["dep:indexmap"]


[dependencies]
derive_builder = "0.13.0"
indexmap = { version = "2.1", features = ["serde"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

[dev-dependencies]
glob = "0.3"
