[package]
name = "docker-compose-types"
description = "Deserialization and Serialization of docker-compose.yml files in a relatively strongly typed fashion."
version = "0.19.0"
edition = "2021"
repository = "https://github.com/stephanbuys/docker-compose-types"
license = "MIT/Apache-2.0"
keywords = ["docker-compose", "compose"]
categories = ["data-structures"]
authors = [
    "Stephan Buys <hello@stephanbuys.com>",
    "Community Contributors"
]
readme = "README.md"

[features]
default = ["indexmap", "yaml"]
indexmap = ["dep:indexmap"]
yml = ["dep:serde_yml"]
yaml = ["dep:serde_yaml"]
norway = ["dep:serde_norway"]


[dependencies]
derive_builder = "0.20.0"
indexmap = { version = "2.2", features = ["serde"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = { version = "=0.9.33", optional = true }
serde_yml = { version = "0.0.12", optional = true }
serde_norway = { version = "0.9.42", optional = true }

[dev-dependencies]
glob = "0.3"
